[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "[[PackageName]]"
version = "[[Version number]]"
description = "[[Short description]]"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "[[Author 1 name]]", email = "[[Author 1 email]]"}, {name = "[[Author 2 name]]", email = "[[Author 2 email]]"}]
maintainers = [{name = "[[Maintainer 1 name]]", email = "[[Maintainer 1 email]]"}]
license = {text = "[[License]]"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1",
]

[project.urls]
repository = "[[Repository Link]]"

[project.entry-points.'OVITO.Modifier']
"[[Human readable modifier name]]" = "[[PackageName]]:[[ModifierName]]"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]