[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DisplayLammpsLog"
version = "2023.0"
description = "Display the lammps log file alongside you structure data in OVITO Pro"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.1",
    "numpy",
    "lmParse  @git+https://github.com/nnn911/lmParse@669cdda078755b063318212eced71b3ed5098cf4"
]   

[project.urls]
repository = "https://github.com/nnn911/DisplayLammpsLog"

[project.entry-points.'OVITO.Modifier']
"Display Lammps Log" = "DisplayLammpsLog:DisplayLammpsLog"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]